# media-stream-library-js

./: .browserslistrc  .editorconfig  .eslint-import-groups.cjs  .eslint-rules.cjs  .eslintrc.cjs  .eslintrc.json  .eslintrc.yml  .gitattributes  .gitignore  .npmignore  .pnp.cjs  .pnp.js  .prettierignore  .prettierrc.json  .prettierrc.yml  .travis.yml  .yarnrc.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  changePackageName.js  changeset.md  cypress.config.ts  docker-compose.yml  dprint.json  esbuild.js  esbuild.mjs  justfile  package-lock.json  package.json  polyfill.js  renovate.json  tsconfig.base.json  tsconfig.browser.json  tsconfig.cjs.json  tsconfig.es5.json  (+8 more)
.github/: dependabot.yml  pull_request_template.md
example-overlay-react/: App.jsx  App.tsx  Circle.jsx  Polygon.jsx  Text.jsx  index.css  index.html  index.jsx  index.tsx  package.json  tsconfig.json  vite.mjs
example-player-react/: App.jsx  BasicStream.jsx  MultiStream.jsx  SingleStream.jsx  WebRtcStream.jsx  index.html  index.jsx  package.json  vite.mjs
example-player-webcomponent/: index.html  package.json
example-streams-node/: README.md  mjpeg-player.js  package.json  pipeline.mjs  player.cjs  player.mjs
example-streams-web/: README.md  package.json
gst-rtsp-launch/: Dockerfile  README.md
gst-rtsp-launch/src/: gst-rtsp-launch.c  meson.build
lib/: browser-types.ts  index.browser.js  index.browser.ts  index.node.js  index.node.ts  www-authenticate.d.ts
overlay/: .eslintrc.json  .eslintrc.yml  .gitignore  .npmignore  .pnp.cjs  .pnp.js  (+12 more)
(+736 files in other folders)
